@@ -1,3 +1,8 @@
+2008-09-11  Werner Koch  <wk@g10code.com>
+
+	* gcrypt.texi (Public-Key Subsystem Architecture): Explain RSA
+	blinding.
+
 2008-09-08  Marcus Brinkmann  <marcus@g10code.com>
 
 	* gcrypt.texi: Some typos fixed.
