@@ -1,3 +1,8 @@
+2008-09-11  Werner Koch  <wk@g10code.com>
+
+	* fips.c (_gcry_fips_run_selftests): Run random tests before the
+	pubkey tests.
+
 2008-09-05  Werner Koch  <wk@g10code.com>
 
 	* gcrypt.h.in (GCYRCTL_SELFTEST): New.
